--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Listen to this shit!</h1>
     <a href="eagle.html">
-    <img src="images/eagle.png" height="300" width="300" title="AI generated eagle">
+    <img src="http://www.prints.pink/strawberries/files/strawberryfacts.gif" height="300" width="300" title="AI generated eagle">
     </a>
     <br>
 
